# Projeto-NEXUS

./: .gitignore  Cargo.toml  LICENSE  NEXUS_GROUNDING_POLICY.md  README.md  SECURITY.md  deny.toml  iniciar_validador.sh
.ai/: NEXUS_MTP_BENCHMARK_TROUBLESHOOTING.md  NEXUS_MTP_TRAINER_TROUBLESHOOTING.md  README.md
.ai/context/: project-overview.md
.ai/modules/: agente_intermediario.md  nexus_control_server.md  nexus_mtp.md  nexus_rag.md  nexus_rag_agent.md  validador.md
.ai/pitfalls/: known-issues.md
.ai/replication-guide/: step-by-step.md
.github/workflows/: ci.yml  integration.yml  security.yml
agente_intermediario/: projeto_completo.txt
agente_intermediario/src/: main.rs  main.rs.bak  main.rs.bak2
backups/Validador/: main_20260305_140804.rs  main_20260305_153829.rs  main_20260305_161510.rs  main_20260305_162132.rs  main_20260305_162328.rs  main_20260305_162657.rs  main_20260305_163110.rs  main_20260305_163910.rs  main_20260305_164648.rs  main_20260305_170657.rs  main_20260305_171334.rs  main_20260305_172107.rs  main_20260305_172422.rs  main_20260305_172628.rs  main_20260305_172950.rs  main_20260305_173206.rs  main_20260305_173607.rs  main_20260305_190629.rs  main_20260305_191209.rs  main_20260305_191308.rs  main_20260305_191348.rs  main_20260305_191536.rs  main_20260305_191600.rs  main_20260305_191620.rs  main_20260305_191649.rs  main_20260305_191805.rs  main_20260305_192351.rs  main_20260305_193159.rs  main_20260305_193719.rs  main_20260305_194237.rs  main_20260305_194701.rs  main_20260305_195252.rs  main_20260305_195937.rs  main_20260305_200248.rs  main_20260305_200510.rs  main_20260305_200721.rs  main_20260305_201741.rs  main_20260305_202508.rs  main_20260305_202757.rs
backups/backup_20260227/: agente_main.rs  validador_main.rs
config/env/: .env.example  nexus_rag.env.example
config/scripts/: README.md  backup_snapshot.ps1  ensure_permissions.sh  iniciar_validador.sh  install_cloudflared_wsl.sh  nexus_ctl.sh  nexus_start.sh  resolve_kb_ingest_password.sh  run_copy_env.sh  setup_named_tunnel_wsl.sh  setup_worker.sh  start_named_tunnel_wsl.sh  start_quick_tunnel_wsl.sh
dados/qdrant_storage/: raft_state.json
database/: README.md
database/migrations/: 002_benchmark_questions.sql
database/schemas/: SCHEMA_EXPECTED.md
database/seeds/: 001_benchmark_questions.sql
docs/: README.md  architecture.md  control-server.md  crates.md  database.md  ingestion.md  mtp-troubleshooting-benchmark.md  mtp-troubleshooting-trainer.md  nexus-mtp.md  nexus-rag-cli.md  operations.md  overview.md  rag-agent-api.md  replication.md  roadmap.md  setup.md
docs/api/: nexus_control_server.md  nexus_mtp.md  nexus_rag.md
docs/architecture/: overview.md  workspace-structure.md
github_backups/20260306_125254_recheck_codex/: git_status.txt  metadata.json
github_backups/20260306_131034_code_changes_autobackup/: metadata.json  working_tree.patch
github_backups/20260306_134720_clean_pipeline_step/: metadata.json
github_backups/20260306_160744_perms_guard_validador_rag/: metadata.json
github_backups/20260306_171014_readme_manual_operacional_completo/: git_status.txt  metadata.json
nexus_control_server/: README.md  server.py  services.json
nexus_control_server/frontend/: app.js  index.html  styles.css
nexus_control_server/scripts/: install_cloudflared_wsl.sh  nexus_ctl.sh  nexus_start.sh  setup_named_tunnel_wsl.sh  setup_worker.sh  start_named_tunnel_wsl.sh  start_quick_tunnel_wsl.sh
nexus_mtp/: BOOTSTRAP_MODEL.md
nexus_mtp/migrations/: 001_mtp_schema.sql
nexus_mtp/src/: approval.rs  benchmark.rs  dataset.rs  db.rs  error.rs  main.rs  trainer.rs
nexus_rag/src/: approval.rs  clean.rs  db.rs  embedder.rs  error.rs  indexer.rs  main.rs  qdrant_builder.rs  query.rs
nexus_sugestor/: servidor.py
scripts/: backup_snapshot.ps1  ensure_permissions.sh  run_copy_env.sh  sync_container_to_github.ps1
src/: lib.rs
src/agente_intermediario/: Cargo.toml  README.md
src/agente_intermediario/src/: lib.rs  main.rs
src/nexus_control_server/: README.md  cloudflared-config.example.yml  server.py  services.json
src/nexus_inference_server/: requirements.txt  server.py  start.sh
src/nexus_mtp/: Cargo.toml  README.md
src/nexus_mtp/src/: approval.rs  benchmark.rs  dataset.rs  db.rs  error.rs  lib.rs  main.rs  trainer.rs
src/nexus_rag/: Cargo.toml  README.md
src/nexus_rag/src/: approval.rs  clean.rs  db.rs  embedder.rs  indexer.rs  lib.rs  main.rs  metrics.rs  qdrant_builder.rs  query.rs
src/nexus_rag_agent/: Cargo.toml
src/nexus_rag_agent/src/: agent.rs  lib.rs  prompts.rs  runtime.rs  verifier.rs
src/nexus_sugestor/: README.md
src/validador/: Cargo.toml  README.md
src/validador/src/: lib.rs  main.rs
tests/: README.md
tests/agente_intermediario/: ingest_tests.rs
tests/fixtures/: sample.html
tests/nexus_control_server/: test_server.py
validador/: Cargo.toml  nexus_session_state.json
validador/src/: main.rs  (+1 more)
(+117 files in other folders)
