[package]
name = "nexus_workspace"
version = "0.1.0"
edition = "2021"
publish = false
[workspace]
members = [
  "src/agente_intermediario",
  "src/nexus_rag",
  "src/nexus_mtp",
  "src/validador"
]
resolver = "2"
[dev-dependencies]
agente_intermediario = { path = "src/agente_intermediario" }
validador = { package = "nexus_validador", path = "src/validador" }
nexus_rag = { path = "src/nexus_rag" }
nexus_mtp = { path = "src/nexus_mtp" }
httpmock = "0.7"
uuid = { version = "1.21.0", features = ["v4"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.80"
qdrant-client = "1.12.1"
serde_json = "1.0"
tempfile = "3.12.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }





