[package]
name = "agente_intermediario"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tempfile = "3"
hex = "0.4.3"
postgres = { version = "0.19.12", features = ["with-uuid-1"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.25.0"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v4"] }
lopdf = "0.34.0"
serde_json = "1.0"

[dev-dependencies]
httpmock = "0.7"

