[package]
name    = "nexus_mtp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexus_mtp"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1.43", features = ["full"] }
sqlx               = { version = "0.8",  features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde              = { version = "1.0",  features = ["derive"] }
serde_json         = "1.0"
sha3               = "0.10"
hex                = "0.4"
uuid               = { version = "1.11", features = ["v4"] }
chrono             = { version = "0.4",  features = ["serde"] }
clap               = { version = "4.5",  features = ["derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
async-trait      = "0.1.80"
anyhow             = "1.0"
thiserror          = "2.0"
crossterm          = "0.28"
ratatui            = "0.29"
candle-core         = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-transformers = { git = "https://github.com/huggingface/candle", package = "candle-transformers" }
candle-nn           = { git = "https://github.com/huggingface/candle", package = "candle-nn" }
tokenizers          = "0.21"

