
[package]

name = "nexus_validador"

version = "0.2.0"

edition = "2024"
license = "Apache-2.0"

[dependencies]

postgres = { version = "0.19.12", features = ["with-uuid-1"] }

chrono = "0.4.38"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }

[profile.release]

opt-level = 3

